1952 [FFMSIndexer] enhanced progress window in case that the index file already exists
1951 [MKV Muxer] problem with chapter information in audio files fixed
1950 [One-Click] a new job will be added after the indexing job to show the progress of the preprocessing
1949 [Audio Encoder] if AAC is detected FFAudioSource() will be used
     [Audio Encoder] downmix will be ignored if there are not more than 2 audio channels
1948 changed ISO 639-2 language codes for Croatian, Romanian and Serbian
1947 [File Indexer] fixed selecting of settings after initial opening. Bug #3182423
1946 [Audio Jobs] update elapsed time while preprocessing
1945 [VideoPlayer] while resizing/opening the window is moved to the visible area of the desktop
1944 [One-Click] audio language names added to the output file
1943 [AVS Script Creator] VideoPlayer preview starts in 1:1 mode
     [AVS Script Creator] while cropping VideoPlayer preview moves to the cropping border
     [VideoPlayer] fixed a sizing problem when window was minimized
     [VideoPlayer] fixed appearing unnecessary scrollbars in 1:1 mode
     [VideoPlayer] start window in top of other windows (excluding calling window)
     [Chapter Creator] + [AVS Cutter] VideoPlayer preview respects the "always on top" setting
1942 [VideoPlayer] fixed invisible right border in some OS (at least XP). Bug #3177073
1941 [XviD] replaced -lumimasking with -masking (requires xvid 1.3). Feature request #3139141
     [XviD] disabled direct mkv output
1940 [Log] changed version number syntax for MeGUI x64
1939 [Settings] added buttons to clear the default output directory and the path to neroaacenc. Feature request #3177293
1938 [One-Click] fixed language pre-selection if the default languages are not different. Bug #3178016
1937 [XviD] enhanced overflow handling in the settings dialogue
1936 audio encoding job can be added without existing input file
1935 AssumeFPS() added to DirectShow(), DSS2() and FFVideoSource() scripts